新增相机控制器和发光案例

--- a/功能说明.md
+++ b/功能说明.md
@@ -116,3 +116,100 @@
     5. 添加了物体旋转动画
     6. 使用了一个更复杂的几何体（环形结）来展示裁剪效果
 
+#### 1.3控制器
+
+- 摄像头控制
+  - 支持三种不同的控制模式：
+    - 轨道控制（OrbitControls）
+    - 飞行控制（FlyControls）
+    - 第一人称控制（FirstPersonControls）
+  - 可以通过按钮切换不同的控制模式
+  - 提供移动速度和视角速度的调节
+  - 包含自动旋转选项（轨道模式）
+- OrbitControls
+  2. 提供基础控制（阻尼、缩放、旋转、平移）
+  3. 支持自动旋转功能
+  4. 可以设置视角限制（距离、角度）
+  5. 包含视觉辅助（坐标轴、网格）
+  6. 提供快捷按钮（重置视角、切换自动旋转）
+
+- 变换控制器
+  - 支持对象的平移、旋转和缩放操作
+  - 可以切换本地坐标和世界坐标系
+  - 支持点击选择不同的物体进行变换
+  - 提供变换吸附功能（网格对齐）
+  - 包含多个示例物体
+  - 与轨道控制器协同工作
+
+- 地图控制器
+  1. 使用 MapControls 实现类似地图的控制方式
+  2. 生成随机地形并支持参数调整
+  3. 提供网格参考系统
+  4. 支持视角切换（正常/俯视）
+  5. 包含完整的控制器参数设置
+  6. 提供阻尼效果和各种限制选项
+  7. 支持屏幕空间平移
+
+#### 1.4闪耀发光
+
+- 点精灵贴图：
+  1. 使用 Canvas 创建自定义的发光纹理
+  2. 支持多个发光精灵的创建和控制
+  3. 实现旋转和脉冲动画效果
+  4. 提供完整的参数控制：
+     - 精灵数量、大小、颜色和不透明度
+     - 分布范围控制
+     - 动画速度调节
+  5. 使用加法混合实现发光效果
+
+- 着色方式
+  1. 使用自定义着色器实现边缘发光效果
+  2. 支持调整发光颜色、强度和衰减
+  3. 内部物体可以切换线框模式
+  4. 实现自动旋转动画
+  5. 使用加法混合实现发光叠加
+
+- 后期处理发光：
+  1. 使用 EffectComposer 实现后期处理效果
+  2. 采用 UnrealBloomPass 实现发光效果
+  3. 支持多个发光物体的效果叠加
+  4. 提供完整的发光参数控制：
+     - 曝光度调节
+     - 发光强度
+     - 发光阈值
+     - 发光半径
+  5. 包含多种动画效果：
+     - 物体旋转
+     - 上下浮动
+  6. 使用 MeshStandardMaterial 的发光属性
+
+- 掩膜通道发光：
+  1. 使用图层系统实现选择性发光
+  2. 提供两个对比物体：立方体和球体
+  3. 可以独立控制每个物体的发光状态
+  4. 使用多个渲染通道：
+     - 发光通道处理发光效果
+     - 最终通道合成完整场景
+  5. 提供完整的发光参数控制：
+     - 曝光度
+     - 发光强度
+     - 发光阈值
+     - 发光半径
+  6. 包含自动旋转动画
+  7. 支持实时切换物体的发光状态
+
+- 图层叠加发光：
+  1. 创建多个随机位置和颜色的几何体
+  2. 随机设置部分几何体发光
+  3. 使用多个渲染通道：
+     - 发光通道处理发光物体
+     - 基础通道处理非发光物体
+     - 最终通道合成完整效果
+  4. 提供完整的发光参数控制：
+     - 曝光度
+     - 发光强度
+     - 发光阈值
+     - 发光半径
+  5. 包含自动旋转动画
+  6. 使用材质缓存优化性能
+  7. 支持实时调整所有参数
